<resources>
    <string name="app_name">Jetpack Release Tracker</string>
    <string name="title_libraries">Libraries</string>
    <string name="title_updates">Updates</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_project_syncs">Project Sync</string>
    <string name="title_create_project_sync">Add Project</string>
    <string name="title_edit_project_sync">Edit Project</string>
    <string name="list_header_artifact">Artifact</string>
    <string name="list_header_latest_stable">Stable</string>
    <string name="list_header_latest_release">Latest</string>
    <string name="empty_libraries_text">AndroidX Libraries will show up here</string>
    <string name="empty_libraries_fetch_btn">Fetch Libraries</string>
    <string name="no_updates_text">New AndroidX releases will show up here</string>
    <string name="empty_project_syncs_text">Monitor your project\'s Androidx dependencies</string>
    <string name="empty_project_syncs_learn_more_btn">Learn More</string>
    <string name="project_syncs_learn_more_url">https://github.com/lmj0011/jetpack-release-tracker/wiki/Project-Sync-Feature</string>
    <string name="stable_versions_only_switch_text">track stable versions only</string>
    <string name="jetpack_release_archive_url">https://developer.android.com/jetpack/androidx/versions/all-channel</string>
    <string name="debug_notification_content_title">[debug message]</string>

    <string name="project_sync_all_up_to_date">All androidx dependencies are up to date</string>
    <string name="project_sync_outdated_singular">Newer version found for 1 androidx dependency</string>
    <string name="project_sync_outdated_plural">Newer versions found for %1$d androidx dependencies</string>
    <string name="project_sync_no_dependencies">No androidx dependencies found</string>

    <string name="toast_message_updating_libraries">Updating Libraries</string>
    <string name="toast_message_fetching_libraries">Fetching Libraries</string>
    <string name="toast_message_syncing_projects">Syncing Projects</string>

    <string name="notification_text_fetching_artifacts">fetching Artifacts...</string>
    <string name="notification_text_checking_for_newer_lib_versions">Checking for new library versions</string>
    <string name="notification_text_new_versions_available">New Versions Available!</string>
    <string name="notification_text_syncing_all_projects">Syncing all Projects</string>


    <string name="notification_action_button_cancel">Cancel</string>

    <!-- Shared Preference Keys-->
    <string name="pref_key_starred_libraries">PREF_STARRED_LIBRARIES</string>
    <string name="pref_key_starred_filter">PREF_STARRED_FILTER</string>
    <string name="pref_key_mode_night">PREF_MODE_NIGHT</string>

    <!-- Intent Extra Keys-->
    <string name="intent_extra_key_worker_tags">WORKER_TAGS</string>

    <!--  Unique Worker Tags/Names  -->
    <string name="update_periodic_worker">UPDATE_PERIODIC_WORKER</string>
    <string name="update_periodic_worker_tag">UPDATE_PERIODIC_WORKER_TAG</string>
    <string name="update_one_time_worker_tag">UPDATE_ONE_TIME_WORKER_TAG</string>
    <string name="project_sync_all_one_time_worker_tag">PROJECT_SYNC_ALL_ONE_TIME_WORKER_TAG</string>

    <string name="github_repo_url">
        <a href="https://github.com/lmj0011/jetpack-release-tracker">Github</a>
    </string>

    <string name="github_repo_changelog_url">
        <a href="https://github.com/lmj0011/jetpack-release-tracker/commits/master">changelog</a>
    </string>

    <string name="key_project_sync_id_bundle_property">projectSyncId</string>
    <string name="unique_work_name_fetch_libraries">FETCH_LIBRARIES</string>
    <string name="unique_work_name_sync_projects">SYNC_PROJECTS</string>
</resources>
