<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_libraries">

    <fragment
        android:id="@+id/navigation_libraries"
        android:name="name.lmj0011.jetpackreleasetracker.ui.libraries.LibrariesFragment"
        android:label="@string/title_libraries"
        tools:layout="@layout/fragment_libraries" />

    <fragment
        android:id="@+id/navigation_updates"
        android:name="name.lmj0011.jetpackreleasetracker.ui.updates.UpdatesFragment"
        android:label="@string/title_updates"
        tools:layout="@layout/fragment_updates" />

    <fragment
        android:id="@+id/navigation_project_syncs"
        android:name="name.lmj0011.jetpackreleasetracker.ui.projectsyncs.ProjectSyncsFragment"
        android:label="@string/title_project_syncs"
        tools:layout="@layout/fragment_project_syncs" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="name.lmj0011.jetpackreleasetracker.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>
